--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h2{
     display: flex;
     /* color: rgb(107, 234, 84); */
     color: #fff703;
-
+    margin: 20px;
     justify-content: center;
 }
 .btn-D , .btn-R{
@@ -109,7 +109,7 @@ h2{
         width: 80%;
     }
 }
-@media (max-width : 420px){
+@media (max-width : 440px){
     .inputs-body {
         display: flex;
         height: 65vh;
@@ -128,7 +128,7 @@ h2{
         font-size: 17px;
     }
     .encrypted-messages , .shift-value{
-        width: 100%;
+        width: 90%;
         padding: 5px 10px;
         border-radius: 20px;
         border: none;
@@ -137,5 +137,25 @@ h2{
     }
     .inputss{
         width: 80%;
+    }
+    .buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;    
+    }
+    .decoded-messages{
+        margin: 0px;
+    }
+    .h2{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 30px;
+    }
+    h2{
+        margin: 0px;
+    }
+    .first{
+        display: none;
     }
 }
